Before the inclusion of populations